--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <style name="Theme.PaymentCalculationApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/white</item>
